fix: remove banner image cropping

--- a/src/components/deck-display/deck-display.module.css
+++ b/src/components/deck-display/deck-display.module.css
@@ -34,17 +34,6 @@
 
 .banner {
   position: relative;
-  aspect-ratio: 5 / 1;
-}
-
-.banner img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center left;
 }
 
 .tags {
